--- a/html/sub/mypage02.html
+++ b/html/sub/mypage02.html
@@ -165,8 +165,8 @@
 				</div>
 
 				<div class="paging">
-					<button type="button" class="paging-first"><span class="blind">처음으로</span></button>
-					<button type="button" class="paging-prev"><span class="blind">이전</span></button>
+					<button type="button" class="paging-first" disabled><span class="blind">처음으로</span></button>
+					<button type="button" class="paging-prev" disabled><span class="blind">이전</span></button>
 
 					<button type="button" class="on"><span>1</span></button>
 					<button type="button"><span>2</span></button>
