페이징 추가

--- a/html/sub/mypage04.html
+++ b/html/sub/mypage04.html
@@ -158,6 +158,22 @@
 					</div>
 					<!-- E : box-item -->
 				</section>
+
+				<!-- S : paging -->
+				<div class="paging">
+					<button type="button" class="paging-first" disabled><span class="blind">처음으로</span></button>
+					<button type="button" class="paging-prev" disabled><span class="blind">이전</span></button>
+
+					<button type="button" class="on"><span>1</span></button>
+					<button type="button"><span>2</span></button>
+					<button type="button"><span>3</span></button>
+					<button type="button"><span>4</span></button>
+					<button type="button"><span>5</span></button>
+
+					<button type="button" class="paging-next"><span class="blind">다음</span></button>
+					<button type="button" class="paging-last"><span class="blind">마지막으로</span></button>
+				</div>
+				<!-- E : paging -->
 			</div>
 		</main>
         <footer class="base-footer"></footer>
