--- a/html/sub/mypage01.html
+++ b/html/sub/mypage01.html
@@ -42,6 +42,14 @@
 					</p>
 				</div>
 				<div class="tab-link">
+					<select title="마이페이지">
+						<option>내강의실</option>
+						<option>수강내역</option>
+						<option>결제내역</option>
+						<option>수강후기</option>
+						<option>1:1 문의하기</option>
+						<option>개인정보수정</option>
+					</select>
 					<a href="#" class="selected"><span>내강의실</span></a>
 					<a href="#"><span>수강내역</span></a>
 					<a href="#"><span>결제내역</span></a>
@@ -61,6 +69,7 @@
 						<div class="courses-item-b">
 							<dl>
 								<dt>
+									<span ></span>
 									<em class="ctg">영어</em>
 									1회 30분(총4회) 강의 기본<br>
 									<b>김소영 리더</b>
