--- a/html/sub/mypage01.html
+++ b/html/sub/mypage01.html
@@ -69,7 +69,9 @@
 						<div class="courses-item-b">
 							<dl>
 								<dt>
-									<span ></span>
+									<span class="flag">
+										<img src="../../resources/images/common/flag-ing.png" alt="수강중">
+									</span>
 									<em class="ctg">영어</em>
 									1회 30분(총4회) 강의 기본<br>
 									<b>김소영 리더</b>
@@ -113,6 +115,9 @@
 						<div class="courses-item-b">
 							<dl>
 								<dt>
+									<span class="flag">
+										<img src="../../resources/images/common/flag-end.png" alt="수강완료">
+									</span>
 									<em class="ctg">영어</em>
 									1회 30분(총4회) 강의 기본<br>
 									<b>김소영 리더</b>
@@ -128,11 +133,25 @@
 									<p>2021-01-01~2021-04-15</p>
 								</dd>
 							</dl>
-							
+						</div>
+						<div class="courses-item-c">
+							<ol class="step">
+								<li class="on">1</li>
+								<li class="on">2</li>
+								<li class="on">3</li>
+								<li class="on">4</li>
+								<li class="on">5</li>
+								<li class="on">6</li>
+								<li class="on">7</li>
+								<li class="on">8</li>
+							</ol>
+							<button type="button" class="btn-gold big" disabled>
+								<span>비대면 수업완료</span>
+							</button>
 						</div>
 					</div>
 
-					<div class="courses-item">
+					<div class="courses-item ready">
 						<div class="courses-item-a">
 							<img src="../../resources/images/temp/@t-img08.png" alt="">
 							<button type="button" class="btn-talk">
@@ -142,6 +161,9 @@
 						<div class="courses-item-b">
 							<dl>
 								<dt>
+									<!-- <span class="flag">
+										<img src="../../resources/images/common/flag-ing.png" alt="수강중">
+									</span> -->
 									<em class="ctg">영어</em>
 									1회 30분(총4회) 강의 기본<br>
 									<b>김소영 리더</b>
@@ -158,9 +180,22 @@
 								</dd>
 							</dl>
 						</div>
-						
+						<div class="courses-item-c">
+							<ol class="step">
+								<li class="on">1</li>
+								<li class="on">2</li>
+								<li class="on">3</li>
+								<li class="on">4</li>
+								<li>5</li>
+								<li>6</li>
+								<li>7</li>
+								<li>8</li>
+							</ol>
+							<button type="button" class="btn-gold big" disabled>
+								<span>강의실 입장</span>
+							</button>
+						</div>
 					</div>
-
 				</div>
 
 				<div class="paging">
