--- a/html/sub/mypage01.html
+++ b/html/sub/mypage01.html
@@ -43,7 +43,7 @@
 				</div>
 				<div class="tab-link">
 					<select title="마이페이지">
-						<option>내강의실</option>
+						<option selected>내강의실</option>
 						<option>수강내역</option>
 						<option>결제내역</option>
 						<option>수강후기</option>
@@ -73,7 +73,7 @@
 										<img src="../../resources/images/common/flag-ing.png" alt="수강중">
 									</span>
 									<em class="ctg">영어</em>
-									1회 30분(총4회) 강의 기본<br>
+									<span class="subject">1회 30분(총4회) 강의 기본</span>
 									<b>김소영 리더</b>
 								</dt>
 								<dd>
@@ -119,7 +119,7 @@
 										<img src="../../resources/images/common/flag-end.png" alt="수강완료">
 									</span>
 									<em class="ctg">영어</em>
-									1회 30분(총4회) 강의 기본<br>
+									<span class="subject">1회 30분(총4회) 강의 기본</span>
 									<b>김소영 리더</b>
 								</dt>
 								<dd>
@@ -165,7 +165,7 @@
 										<img src="../../resources/images/common/flag-ing.png" alt="수강중">
 									</span> -->
 									<em class="ctg">영어</em>
-									1회 30분(총4회) 강의 기본<br>
+									<span class="subject">1회 30분(총4회) 강의 기본</span>
 									<b>김소영 리더</b>
 								</dt>
 								<dd>
