--- a/html/sub/login.html
+++ b/html/sub/login.html
@@ -63,6 +63,7 @@
 						<span class="box-checkbox-a"><input type="checkbox" class="form-checkbox" id="id-save"><label for="id-save">아이디 저장</label></span>
 					</div>
 					<div class="other-item">
+						<a href="" class="link-join"><span class="link-txt">아이디/비밀번호 찾기</span></a>
 						<a href="" class="link-join"><span class="link-txt">회원가입</span></a>
 					</div>
 				</div>
