--- a/html/sub/mypage02.html
+++ b/html/sub/mypage02.html
@@ -42,6 +42,14 @@
 					</p>
 				</div>
 				<div class="tab-link">
+                    <select title="마이페이지">
+                        <option>내강의실</option>
+                        <option selected>수강내역</option>
+                        <option>결제내역</option>
+                        <option>수강후기</option>
+                        <option>1:1 문의하기</option>
+                        <option>개인정보수정</option>
+                    </select>
 					<a href="#"><span>내강의실</span></a>
 					<a href="#" class="selected"><span>수강내역</span></a>
 					<a href="#"><span>결제내역</span></a>
