--- a/html/sub/mypage05.html
+++ b/html/sub/mypage05.html
@@ -32,9 +32,10 @@
 		</header>
 		<main class="base-body-a">
 			<div class="base-container">
-				<div class="ajax-banner">
-				</div>
-				<div class="ajax-mypage-top" data-n="4"></div>
+				
+				<div class="ajax-banner"></div>
+				<div class="ajax-mypage-top" data-n="5"></div>
+
 				<section class="search-area">
 					<fieldset>
 						<legend class="for-a11y">검색</legend>
