--- a/html/sub/mypage05_2.html
+++ b/html/sub/mypage05_2.html
@@ -47,78 +47,63 @@
 						<option>수강내역</option>
 						<option>결제내역</option>
 						<option>수강후기</option>
-						<option>1:1 문의하기</option>
-						<option selected>개인정보수정</option>
+						<option selected>1:1 문의하기</option>
+						<option>개인정보수정</option>
 					</select>
 					<a href="#"><span>내강의실</span></a>
 					<a href="#"><span>수강내역</span></a>
 					<a href="#"><span>결제내역</span></a>
 					<a href="#"><span>수강후기</span></a>
-					<a href="#"><span>1:1 문의하기</span></a>
-					<a href="#" class="selected"><span>개인정보수정</span></a>
+					<a href="#" class="selected"><span>1:1 문의하기</span></a>
+					<a href="#"><span>개인정보수정</span></a>
 				</div>
 
 				<section class="box-a big">
 					<div class="join-area">
 						<div class="form-item">
-							<div class="form-col-c"><label for="join-id">아이디</label></div>
-							<div class="form-col-b"><input type="text" id="join-id" class="input-a" value="tera" disabled></div>
-						</div>
-						<div class="form-item">
-							<div class="form-col-c"><label for="join-pw">비밀번호</label></div>
-							<div class="form-col-b"><input type="password" id="join-pw" class="input-a" placeholder="영문자+숫자조합 8~12자리 이하"></div>
-						</div>
-						<p class="error-massage"></p><!-- D : error massage 미노출시 -->
-						<div class="form-item">
-							<div class="form-col-c"><label for="join-pw2">비밀번호 확인</label></div>
-							<div class="form-col-b"><input type="password" id="join-pw2" class="input-a" placeholder="비밀번호 재입력"></div>
-						</div>
-						<p class="error-massage"></p><!-- D : error massage 미노출시 -->
-						<div class="form-item">
-							<div class="form-col-c"><label for="join-name">이름</label></div>
-							<div class="form-col-b"><input type="text" id="join-name" class="input-a" placeholder="실명 입력(실명인증 이용시 자동입력)"></div>
-						</div>
-						<div class="form-item">
-							<div class="form-col-c"><label for="join-nic-name">닉네임</label></div>
-							<div class="form-col-b"><input type="text" id="join-nic-name" class="input-a"></div>
-						</div>
-						<div class="form-item">
-							<div class="form-col-c"><label for="join-number">주민등록번호</label></div>
+							<div class="form-col-c"><label for="w-category">카테고리</label></div>
 							<div class="form-col-b">
-								<div class="form-group">
-									<div class="form-col-b"><input type="tel" id="join-number" class="input-a"></div>
-									<div class="form-col-txt">-</div>
-									<div class="form-col-b"><input type="tel" id="join-number2" class="input-a"></div>
-								</div>
-							</div>
-						</div>
-						<div class="form-item">
-							<div class="form-col-c"><label for="join-hp">휴대전화</label></div>
-							<div class="form-col-b"><input type="tel" id="join-hp" class="input-a"></div>
-						</div>
-						<div class="form-item">
-							<div class="form-col-c"><label for="join-email">이메일</label></div>
-							<div class="form-col-b">
-								<div class="form-group">
-									<div class="form-col-b"><input type="email" id="join-email" class="input-a"></div>
-									<div class="form-col-txt">@</div>
-									<div class="form-col-b"><input type="email" id="join-email2" class="input-a"></div>
-								</div>
-							</div>
-							<div class="form-col-select">
-								<select name="" id="" class="form-select">
-									<option value="">직접입력</option>
+								<select name="" id="w-category" class="form-select">
+									<option value="">회원정보</option>
 								</select>
+							</div>
+						</div>
+						<div class="form-item">
+							<div class="form-col-c"><label for="w-hp">휴대전화</label></div>
+							<div class="form-col-b"><input type="tel" id="w-hp" class="input-a"></div>
+						</div>
+						<div class="form-item">
+							<div class="form-col-c"><label for="w-title">제목</label></div>
+							<div class="form-col-b"><input type="text" id="w-title" class="input-a" placeholder=""></div>
+						</div>
+						<div class="form-item">
+							<div class="form-col-c"><label for="w-content">문의내용</label></div>
+							<div class="form-col-b"><textarea name="" id="w-content" cols="30" rows="10" class="form-textarea"></textarea></div>
+						</div>
+
+						<div class="form-item">
+							<div class="form-col-c"><label for="w-file1">첨부파일1</label></div>
+							<div class="form-col-b"></div>
+						</div>
+						<div class="form-item">
+							<div class="form-col-c"><label for="w-fil2e">첨부파일2</label></div>
+							<div class="form-col-b"></div>
+						</div>
+						<div class="form-item">
+							<div class="form-col-c"><label for="w-safe">도배방지키</label></div>
+							<div class="form-col-b">
+								<div class="form-group">
+									<div class="form-col-c"><input type="tel" id="w-safe" class="input-a"></div>
+									<div class="form-col-b"><span class="box-safe">1234</span></div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</section>
-				<div class="box-btns">
-					<div class="btn-area-a">
-						<button type="button" class="btn-type-e">취소</button>
-						<button type="button" class="btn-type-c">저장</button>
-					</div>
-					<div class="leave"><a href="" class="link-join"><span class="link-txt">회원탈퇴</span></a></div>
+				<div class="btn-area-a">
+					<button type="button" class="btn-type-e">취소</button>
+					<button type="button" class="btn-type-f">다시쓰기</button>
+					<button type="button" class="btn-type-c">저장</button>
 				</div>
 			</div>
 		</main>
