--- a/html/sub/mypage05.html
+++ b/html/sub/mypage05.html
@@ -63,88 +63,48 @@
 					</fieldset>
 				</section>
 
-				<section class="box-list-a">
-					<!-- S : box-item -->
-					<div class="box-item-a">
-						<a href="" class="link-review">
-							<div class="leader-info-a">
-								<div class="leader-img"><img src="../../resources/images/temp/@t-img06.png" alt=""></div>
-								<p class="leader-name">김연수 리더</p>
-							</div>
-							<div class="box-content">
-								<dl class="content-item">
-									<dt class="content-title">강의정보</dt>
-									<dd class="content-data">
-										<p class="data-title"><span class="subject">영어</span>1회 30분(총4회) 강의 기본</p>
-										<p class="data-txt">
-											<span class="data-item">월 오후 14:00~14:30</span>
-											<span class="data-item">화 오전 10:00~10:30</span>
-											<span class="data-item">수 오전 10:00~10:30</span>
-											<span class="data-item">목 오전 10:00~10:30</span>
-											<span class="data-item">금 오전 10:00~10:30</span>
-											<span class="data-item">토 오후 14:00~14:30</span>
-											<span class="data-item">일 오전 10:00~10:30</span>
-										</p>
-									</dd>
-								</dl>
-								<dl class="content-item">
-									<dt class="content-title">평가내용</dt>
-									<dd class="content-data">
-										<div class="review-data">
-											<div class="star-area"><span class="box-star"><span class="star-data" style="width:100%"></span></span></div>
-											<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요! Oh my goodness! 집중력이 달라진다. 친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!!</p>
-										</div>
-									</dd>
-								</dl>
-								<p class="writer-data">
-									<span class="writer-id">zhe***</span>
-									<span class="write-day">2021-02-05</span>
-								</p>
-							</div>
-						</a>
-					</div>
-					<!-- E : box-item -->
-					<!-- S : box-item -->
-					<div class="box-item-a">
-						<a href="" class="link-review">
-							<div class="leader-info-a">
-								<div class="leader-img"><img src="../../resources/images/temp/@t-img06.png" alt=""></div>
-								<p class="leader-name">김연수 리더</p>
-							</div>
-							<div class="box-content">
-								<dl class="content-item">
-									<dt class="content-title">강의정보</dt>
-									<dd class="content-data">
-										<p class="data-title"><span class="subject">영어</span>1회 30분(총4회) 강의 기본</p>
-										<p class="data-txt">
-											<span class="data-item">월 오후 14:00~14:30</span>
-											<span class="data-item">화 오전 10:00~10:30</span>
-											<span class="data-item">수 오전 10:00~10:30</span>
-											<span class="data-item">목 오전 10:00~10:30</span>
-											<span class="data-item">금 오전 10:00~10:30</span>
-											<span class="data-item">토 오후 14:00~14:30</span>
-											<span class="data-item">일 오전 10:00~10:30</span>
-										</p>
-									</dd>
-								</dl>
-								<dl class="content-item">
-									<dt class="content-title">평가내용</dt>
-									<dd class="content-data">
-										<div class="review-data">
-											<div class="star-area"><span class="box-star"><span class="star-data" style="width:100%"></span></span></div>
-											<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요! Oh my goodness! 집중력이 달라진다. 친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!!</p>
-										</div>
-									</dd>
-								</dl>
-								<p class="writer-data">
-									<span class="writer-id">zhe***</span>
-									<span class="write-day">2021-02-05</span>
-								</p>
-							</div>
-						</a>
-					</div>
-					<!-- E : box-item -->
-				</section>
+				<div class="tbl-base">
+					<table>
+						<caption>번호,제목,작성자,등록일,상태 정보의 1:1 문의 게시물 목록입니다</caption>
+						<colgroup>
+							<col style="width:10%">
+							<col style="width:auto">
+							<col style="width:10%">
+							<col style="width:10%">
+							<col style="width:10%">
+						</colgroup>
+						<thead>
+							<tr>
+								<th scope="col">번호</th>
+								<th scope="col">제목</th>
+								<th scope="col">작성자</th>
+								<th scope="col">등록일</th>
+								<th scope="col">상태</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr class="notify">
+								<td>100</td>
+								<td class="subject">
+									<a href="#">[기타문의] 강의선생님 문의  강의선생님 문의 강의선생님 문의 문의  문의  문의  문의</a>  
+								</td>
+								<td>jkdk23</td>
+								<td>2021-01-18</td>
+								<td>답변대기</td>
+							</tr>
+							<tr>
+								<td>100</td>
+								<td class="subject"><a href="#">[기타문의] 강의선생님 문의  강의선생님 문의 강의선생님 문의 문의  문의  문의  문의</a>
+								</td>
+								<td>jkdk23</td>
+								<td>2021-01-18</td>
+								<td>답변대기</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+					
 
 				<!-- S : paging -->
 				<div class="paging">
