--- a/html/inc/mypageTop.html
+++ b/html/inc/mypageTop.html
@@ -12,17 +12,17 @@
 </div>
 <div class="tab-link">
     <select title="마이페이지">
-        <option>내강의실</option>
-        <option>수강내역</option>
-        <option>결제내역</option>
-        <option>수강후기</option>
-        <option>1:1 문의하기</option>
-        <option>개인정보수정</option>
+        <option value="/html/sub/mypage01.html">내강의실</option>
+        <option value="/html/sub/mypage02.html">수강내역</option>
+        <option value="/html/sub/mypage03.html">결제내역</option>
+        <option value="/html/sub/mypage04.html">수강후기</option>
+        <option value="/html/sub/mypage05.html">1:1 문의하기</option>
+        <option value=""/html/sub/mypage06.html">개인정보수정</option>
     </select>
-    <a href="#"><span>내강의실</span></a>
-    <a href="#"><span>수강내역</span></a>
-    <a href="#"><span>결제내역</span></a>
-    <a href="#"><span>수강후기</span></a>
-    <a href="#"><span>1:1 문의하기</span></a>
-    <a href="#"><span>개인정보수정</span></a>
+    <a href="/html/sub/mypage01.html"><span>내강의실</span></a>
+    <a href="/html/sub/mypage02.html"><span>수강내역</span></a>
+    <a href="/html/sub/mypage03.html"><span>결제내역</span></a>
+    <a href="/html/sub/mypage04.html"><span>수강후기</span></a>
+    <a href="/html/sub/mypage05.html"><span>1:1 문의하기</span></a>
+    <a href="/html/sub/mypage06.html"><span>개인정보수정</span></a>
 </div>
