마이페이지 ing

--- a/html/sub/join.html
+++ b/html/sub/join.html
@@ -43,7 +43,7 @@
 				</div>
 
 				<section class="box-a">
-					<div class="join-area">
+					<div class="write-area">
 						<div class="form-item">
 							<div class="form-col-c"><label for="join-id">아이디</label></div>
 							<div class="form-col-b">
