--- a/html/sub/mypage05_2.html
+++ b/html/sub/mypage05_2.html
@@ -59,7 +59,7 @@
 				</div>
 
 				<section class="box-a big">
-					<div class="join-area">
+					<div class="write-area">
 						<div class="form-item">
 							<div class="form-col-c"><label for="w-category">카테고리</label></div>
 							<div class="form-col-b">
@@ -68,9 +68,15 @@
 								</select>
 							</div>
 						</div>
+						<div class="box-massage">
+							<span class="box-checkbox-a"><input type="checkbox" class="form-checkbox" id="secret-ck"><label for="secret-ck">비밀글 <span class="point-color">(*비밀글 선택 시 다른 사람은 게시물을 볼 수 없습니다. ) </span></label></span>
+						</div>
 						<div class="form-item">
 							<div class="form-col-c"><label for="w-hp">휴대전화</label></div>
 							<div class="form-col-b"><input type="tel" id="w-hp" class="input-a"></div>
+						</div>
+						<div class="box-massage">
+							<span class="box-checkbox-a"><input type="checkbox" class="form-checkbox" id="sms-ck"><label for="sms-ck"><span class="point-color">선택 시 답변 알림 SMS 발송됩니다.</span></label></span>
 						</div>
 						<div class="form-item">
 							<div class="form-col-c"><label for="w-title">제목</label></div>
@@ -97,6 +103,9 @@
 									<div class="form-col-b"><span class="box-safe">1234</span></div>
 								</div>
 							</div>
+						</div>
+						<div class="box-massage">
+							<p class="txt-a">* 도배방지키를 확인해주세요.  </p>
 						</div>
 					</div>
 				</section>
