--- a/html/sub/mypage05.html
+++ b/html/sub/mypage05.html
@@ -63,15 +63,15 @@
 					</fieldset>
 				</section>
 
-				<div class="tbl-base">
+				<div class="tbl-base type-inquiry">
 					<table>
 						<caption>번호,제목,작성자,등록일,상태 정보의 1:1 문의 게시물 목록입니다</caption>
 						<colgroup>
-							<col style="width:10%">
-							<col style="width:auto">
-							<col style="width:10%">
-							<col style="width:10%">
-							<col style="width:10%">
+							<col class="col1">
+							<col class="col2">
+							<col class="col3">
+							<col class="col4">
+							<col class="col5">
 						</colgroup>
 						<thead>
 							<tr>
