마이페이지 리더 ing

--- a/html/inc/mypageTop.html
+++ b/html/inc/mypageTop.html
@@ -17,7 +17,7 @@
         <option value="/html/sub/mypage03.html">결제내역</option>
         <option value="/html/sub/mypage04.html">수강후기</option>
         <option value="/html/sub/mypage05.html">1:1 문의하기</option>
-        <option value=""/html/sub/mypage06.html">개인정보수정</option>
+        <option value="/html/sub/mypage06.html">개인정보수정</option>
     </select>
     <a href="/html/sub/mypage01.html"><span>내강의실</span></a>
     <a href="/html/sub/mypage02.html"><span>수강내역</span></a>
