--- a/html/sub/mypageL03.html
+++ b/html/sub/mypageL03.html
@@ -34,23 +34,7 @@
 			<div class="base-container">
 				<div class="ajax-banner">
 				</div>
-				<div class="title-group">
-					<h2>홍길동 <span class="level-01">리더</span></h2>
-				</div>
-				<div class="tab-link">
-					<select title="마이페이지">
-						<option>강의목록</option>
-						<option>리더수수료관리</option>
-						<option selected>수강후기</option>
-						<option>1:1 문의하기</option>
-						<option>개인정보수정</option>
-					</select>
-					<a href="#"><span>강의목록</span></a>
-					<a href="#"><span>리더수수료관리</span></a>
-					<a href="#" class="selected"><span>수강후기</span></a>
-					<a href="#"><span>1:1 문의하기</span></a>
-					<a href="#"><span>개인정보수정</span></a>
-				</div>
+				<div class="ajax-mypage-top-l" data-n="3"></div>
 				<section class="search-area">
 					<fieldset>
 						<legend class="for-a11y">검색</legend>
