--- a/html/sub/mypage05_2.html
+++ b/html/sub/mypage05_2.html
@@ -34,29 +34,7 @@
 			<div class="base-container">
 				<div class="ajax-banner">
 				</div>
-				<div class="title-group">
-					<h2>홍길동 님 <span class="level-01">일반회원</span></h2>
-					<p>
-						보유 포인트<br>
-						<em class="num"><span>992,000</span>p</em>
-					</p>
-				</div>
-				<div class="tab-link">
-					<select title="마이페이지">
-						<option>내강의실</option>
-						<option>수강내역</option>
-						<option>결제내역</option>
-						<option>수강후기</option>
-						<option selected>1:1 문의하기</option>
-						<option>개인정보수정</option>
-					</select>
-					<a href="#"><span>내강의실</span></a>
-					<a href="#"><span>수강내역</span></a>
-					<a href="#"><span>결제내역</span></a>
-					<a href="#"><span>수강후기</span></a>
-					<a href="#" class="selected"><span>1:1 문의하기</span></a>
-					<a href="#"><span>개인정보수정</span></a>
-				</div>
+				<div class="ajax-mypage-top" data-n="5"></div>
 
 				<section class="box-a big">
 					<div class="write-area">
