마이페이지 리더 ing

--- a/html/sub/mypage01.html
+++ b/html/sub/mypage01.html
@@ -170,7 +170,7 @@
 								<li>8</li>
 							</ol>
 							<button type="button" class="btn-gold big" disabled>
-								<span>강의실 입장</span>
+								<span>강의 준비중</span>
 							</button>
 						</div>
 					</div>
