마이페이지 리더 ing

--- a/html/sub/mypage06.html
+++ b/html/sub/mypage06.html
@@ -37,7 +37,7 @@
 				<div class="ajax-mypage-top" data-n="6"></div>
 
 				<section class="box-a big">
-					<div class="join-area">
+					<div class="write-area">
 						<div class="form-item">
 							<div class="form-col-c"><label for="join-id">아이디</label></div>
 							<div class="form-col-b"><input type="text" id="join-id" class="input-a" value="tera" disabled></div>
