마이페이지 리더 ing

--- a/html/inc/payment.html
+++ b/html/inc/payment.html
@@ -103,31 +103,31 @@
                 <div class="form-col">
                     <div class="box-radio-group">
                         <div class="radio-item">
-                            <input type="radio" name="weekChoice" id="week1" class="in-radio" checked="">
+                            <input type="checkbox" name="weekChoice" id="week1" class="in-radio">
                             <label for="week1" class="radio-label">일</label>
                         </div>
                         <div class="radio-item">
-                            <input type="radio" name="weekChoice" id="week2" class="in-radio">
+                            <input type="checkbox" name="weekChoice" id="week2" class="in-radio">
                             <label for="week2" class="radio-label">월</label>
                         </div>
                         <div class="radio-item">
-                            <input type="radio" name="weekChoice" id="week3" class="in-radio">
+                            <input type="checkbox" name="weekChoice" id="week3" class="in-radio">
                             <label for="week3" class="radio-label">화</label>
                         </div>
                         <div class="radio-item">
-                            <input type="radio" name="weekChoice" id="week4" class="in-radio">
+                            <input type="checkbox" name="weekChoice" id="week4" class="in-radio">
                             <label for="week4" class="radio-label">수</label>
                         </div>
                         <div class="radio-item">
-                            <input type="radio" name="weekChoice" id="week5" class="in-radio">
+                            <input type="checkbox" name="weekChoice" id="week5" class="in-radio">
                             <label for="week5" class="radio-label">목</label>
                         </div>
                         <div class="radio-item">
-                            <input type="radio" name="weekChoice" id="week6" class="in-radio">
+                            <input type="checkbox" name="weekChoice" id="week6" class="in-radio">
                             <label for="week6" class="radio-label">금</label>
                         </div>
                         <div class="radio-item">
-                            <input type="radio" name="weekChoice" id="week7" class="in-radio">
+                            <input type="checkbox" name="weekChoice" id="week7" class="in-radio">
                             <label for="week7" class="radio-label">토</label>
                         </div>
                     </div>
@@ -136,15 +136,15 @@
                 <div class="form-col">
                     <div class="box-radio-group">
                         <div class="radio-item">
-                            <input type="radio" name="timeChoice" id="time1" class="in-radio" checked="">
+                            <input type="checkbox" name="timeChoice" id="time1" class="in-radio">
                             <label for="time1" class="radio-label">06:00~10:50</label>
                         </div>
                         <div class="radio-item">
-                            <input type="radio" name="timeChoice" id="time2" class="in-radio">
+                            <input type="checkbox" name="timeChoice" id="time2" class="in-radio">
                             <label for="time2" class="radio-label">11:00~17:50</label>
                         </div>
                         <div class="radio-item">
-                            <input type="radio" name="timeChoice" id="time3" class="in-radio">
+                            <input type="checkbox" name="timeChoice" id="time3" class="in-radio">
                             <label for="time3" class="radio-label">16:00~24:00</label>
                         </div>
                         
