파일 업로드

--- a/html/sub/mypage05_2.html
+++ b/html/sub/mypage05_2.html
@@ -71,7 +71,8 @@
 								<div class="file-upload">
 									<input type="file" id="real-input" class="inp-imgfile for-a11y" accept="img/*" required multiple>
 
-									<button type="button" class="btn-file btn-type-g">사진업로드</botton>	
+									<button type="button" class="btn-file btn-type-g">사진업로드</button>	
+
 									<div class="file-img"></div>	
 								</div>
 								
@@ -85,7 +86,7 @@
 								<div class="file-upload">
 									<input type="file" id="real-input2" class="inp-imgfile for-a11y" accept="img/*" required multiple>
 
-									<button type="button" class="btn-file btn-type-g">사진업로드</botton>	
+									<button type="button" class="btn-file btn-type-g">사진업로드</button>	
 
 									<div class="file-img">
 								
