--- a/html/sub/mypage05_2.html
+++ b/html/sub/mypage05_2.html
@@ -69,7 +69,7 @@
 							<div class="form-col-c"><label for="w-file1">첨부파일1</label></div>
 							<div class="form-col-b">
 								<div class="file-upload">
-									<input type="file" id="real-input" class="inp-imgfile for-a11y" accept="img/*" required multiple>
+									<input type="file" id="real-input" class="inp-imgfile for-a11y" accept="" required multiple>
 
 									<button type="button" class="btn-file btn-type-g">사진업로드</button>	
 
