--- a/html/sub/mypage05_2.html
+++ b/html/sub/mypage05_2.html
@@ -66,7 +66,7 @@
 						</div>
 
 						<div class="form-item">
-							<div class="form-col-c"><label for="w-file1">첨부파일1</label></div>
+							<div class="form-col-c"><label for="real-input">첨부파일1</label></div>
 							<div class="form-col-b">
 								<div class="file-upload">
 									<input type="file" id="real-input" class="inp-imgfile for-a11y" accept="" required multiple>
@@ -81,7 +81,7 @@
 							</div>
 						</div>
 						<div class="form-item">
-							<div class="form-col-c"><label for="w-fil2e">첨부파일2</label></div>
+							<div class="form-col-c"><label for="real-input2">첨부파일2</label></div>
 							<div class="form-col-b">
 								<div class="file-upload">
 									<input type="file" id="real-input2" class="inp-imgfile for-a11y" accept="img/*" required multiple>
