--- a/html/inc/mypageTop.html
+++ b/html/inc/mypageTop.html
@@ -1,4 +1,4 @@
-<div class="title-group">
+<div class="title-group type-my">
     <h2>
         <span class="face">
             <img src="../../resources/images/temp/@t-img06.png">
