--- a/html/sub/join.html
+++ b/html/sub/join.html
@@ -42,7 +42,7 @@
 					</p>
 				</div>
 
-				<section class="box-a">
+				<section class="box-a mgt-a">
 					<div class="write-area">
 						<div class="form-item">
 							<div class="form-col-c"><label for="join-id">아이디</label></div>
