--- a/html/sub/mypage04_2.html
+++ b/html/sub/mypage04_2.html
@@ -39,6 +39,10 @@
 				<section class="box-a big">
 					<div class="write-area">
 						<div class="form-item">
+							<div class="form-col-c"><p class="item-title">평가 별점</p></div>
+							<div class="form-col-b"></div>
+						</div>
+						<div class="form-item">
 							<div class="form-col-c"><label for="w-category">수업</label></div>
 							<div class="form-col-b">
 								<select name="" id="w-category" class="form-select">
