--- a/html/sub/mypage04_2.html
+++ b/html/sub/mypage04_2.html
@@ -40,7 +40,32 @@
 					<div class="write-area">
 						<div class="form-item">
 							<div class="form-col-c"><p class="item-title">평가 별점</p></div>
-							<div class="form-col-b"></div>
+							<div class="form-col-b">
+								<div class="star-choice">
+									<span class="box-star">
+										<span class="box-radio-star">
+											<input type="radio" class="radio-star" id="star-5" name="starChoice">
+											<label for="star-5"><span class="for-a11y">5점</span></label>
+										</span>
+										<span class="box-radio-star">
+											<input type="radio" class="radio-star" id="star-4" name="starChoice">
+											<label for="star-4"><span class="for-a11y">4점</span></label>
+										</span>
+										<span class="box-radio-star">
+											<input type="radio" class="radio-star" id="star-3" name="starChoice">
+											<label for="star-3"><span class="for-a11y">3점</span></label>
+										</span>
+										<span class="box-radio-star">
+											<input type="radio" class="radio-star" id="star-2" name="starChoice">
+											<label for="star-2"><span class="for-a11y">2점</span></label>
+										</span>
+										<span class="box-radio-star">
+											<input type="radio" class="radio-star" id="star-1" name="starChoice">
+											<label for="star-1"><span class="for-a11y">1점</span></label>
+										</span>
+									</span>
+								</div>
+							</div>
 						</div>
 						<div class="form-item">
 							<div class="form-col-c"><label for="w-category">수업</label></div>
