--- a/html/sub/mypageL03_2.html
+++ b/html/sub/mypageL03_2.html
@@ -34,7 +34,7 @@
 			<div class="base-container">
 				<div class="ajax-banner">
 				</div>
-				<div class="ajax-mypage-top" data-n="4"></div>
+				<div class="ajax-mypage-top-l" data-n="3"></div>
 
 				<div class="view-action">
 					<button type="button" class="btn-round-a active"><i class="icon-a"></i>45</button>
@@ -59,18 +59,6 @@
 								<img src="../../resources/images/temp/@sample.jpg" alt="">
 							</div>
 						</div>
-                        <div class="answer-area">
-                            <div class="answer-title-box">
-                                <p class="answer-title">안녕하세요. 답변드립니다. 답변드립니다.답변드립니다.</p>
-                                <p class="writer-data">
-                                    <span class="writer-id">관리자</span>
-                                    <span class="write-day">2021-02-05</span>
-                                </p>
-                            </div>
-                            <div class="answer-content">
-                                <p>수업 관련 문의드립니다.수업 관련 문의드립니다. 수업 관련 문의드립니다.수업 관련 문의드립니다. 수업 관련 문의드립니다.</p>
-                            </div>
-                        </div>
 					</div>
 				</section>
 				<div class="btn-area-a">
