후기 리더 추가

--- a/html/sub/mypageL03_2.html
+++ b/html/sub/mypageL03_2.html
@@ -59,10 +59,52 @@
 								<img src="../../resources/images/temp/@sample.jpg" alt="">
 							</div>
 						</div>
+						<div class="answer-area write">
+							<div class="write-area">
+								<div class="form-item">
+									<div class="form-col-c"><label for="w-content">답변내용</label></div>
+									<div class="form-col-b"><textarea name="" id="w-content" cols="30" rows="10" class="form-textarea"></textarea></div>
+								</div>
+								<div class="form-item">
+									<div class="form-col-c"><label for="real-input">첨부파일1</label></div>
+									<div class="form-col-b">
+										<div class="file-upload">
+											<input type="file" id="real-input" class="inp-imgfile for-a11y" accept="" required multiple>
+											<button type="button" class="btn-file btn-type-g">사진업로드</button>
+											<div class="file-img"></div>
+										</div>
+									</div>
+								</div>
+								<div class="form-item">
+									<div class="form-col-c"><label for="real-input2">첨부파일1</label></div>
+									<div class="form-col-b">
+										<div class="file-upload">
+											<input type="file" id="real-input2" class="inp-imgfile for-a11y" accept="" required multiple>
+											<button type="button" class="btn-file btn-type-g">사진업로드</button>
+											<div class="file-img"></div>
+										</div>
+									</div>
+								</div>
+								<div class="form-item">
+									<div class="form-col-c"><label for="w-safe">도배방지키</label></div>
+									<div class="form-col-b">
+										<div class="form-group">
+											<div class="form-col-c"><input type="tel" id="w-safe" class="input-a"></div>
+											<div class="form-col-b"><span class="box-safe">1234</span></div>
+										</div>
+									</div>
+								</div>
+								<div class="box-massage">
+									<p class="txt-a">* 도배방지키를 확인해주세요.</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
 				<div class="btn-area-a">
-					<button type="button" class="btn-type-c">목록</button>
+					<button type="button" class="btn-type-e">취소</button>
+					<button type="button" class="btn-type-f">다시쓰기</button>
+					<button type="button" class="btn-type-c">저장</button>
 				</div>
 			</div>
 		</main>
