마이페이지(수강생) 완료

--- a/html/sub/mypage04_3.html
+++ b/html/sub/mypage04_3.html
@@ -45,12 +45,14 @@
 				<section class="box-a big">
 					<div class="view-area">
 						<div class="box-top">
-							<p class="view-title secret">[기타문의] 강의선생님 문의  강의선생님 문의</p><!-- D : 비밀글인 경우 [secret] class add -->
-							<p class="writer-data">
+							<p class="view-title"><span class="subject">영어</span> [유재진리더] 중국어 공부에 손 뗀지 오래 됐는데, 핑핑 선생님을 만나고 정말 좋았어요!</p>
+							<div class="writer-data">
+								<div class="box-star-area">
+									<span class="box-star"><span class="star-data" style="width:100%"></span></span>
+								</div>
 								<span class="writer-id">zhe***</span>
 								<span class="write-day">2021-02-05</span>
-								<span class="write-state">답변대기</span>
-							</p>
+							</div>
 						</div>
 						<div class="view-contents">
 							<p>수업 관련 문의드립니다.수업 관련 문의드립니다. 수업 관련 문의드립니다.수업 관련 문의드립니다. 수업 관련 문의드립니다.</p>
@@ -59,22 +61,11 @@
 								<img src="../../resources/images/temp/@sample.jpg" alt="">
 							</div>
 						</div>
-                        <div class="answer-area">
-                            <div class="answer-title-box">
-                                <p class="answer-title">안녕하세요. 답변드립니다. 답변드립니다.답변드립니다.</p>
-                                <p class="writer-data">
-                                    <span class="writer-id">관리자</span>
-                                    <span class="write-day">2021-02-05</span>
-                                </p>
-                            </div>
-                            <div class="answer-content">
-                                <p>수업 관련 문의드립니다.수업 관련 문의드립니다. 수업 관련 문의드립니다.수업 관련 문의드립니다. 수업 관련 문의드립니다.</p>
-                            </div>
-                        </div>
 					</div>
 				</section>
 				<div class="btn-area-a">
-					<button type="button" class="btn-type-c">목록</button>
+					<button type="button" class="btn-type-e">목록</button>
+					<button type="button" class="btn-type-c">수정</button><!-- D : 내가 쓴 글인 경우 노출 -->
 				</div>
 			</div>
 		</main>
