고객센터 진행

--- a/html/sub/customer03.html
+++ b/html/sub/customer03.html
@@ -34,7 +34,7 @@
 			<div class="base-container">
 				
 				<div class="ajax-banner"></div>
-				<div class="ajax-mypage-top" data-n="5"></div>
+				<div class="ajax-customer-top" data-n="3"></div>
 
 				<section class="search-area">
 					<fieldset>
