--- a/html/inc/customerTop.html
+++ b/html/inc/customerTop.html
@@ -1,5 +1,9 @@
 <div class="title-group">
     <h2>고객센터</h2>
+    <p>
+        프리미엄 강사진과 프리미엄 컨설팅의 <br>
+        <em>비대면 수업 TERA STUDY</em>
+    </p>
 </div>
 <div class="tab-link">
     <select title="고객센터">
