--- a/html/inc/mypageTopL.html
+++ b/html/inc/mypageTopL.html
@@ -3,8 +3,11 @@
         <span class="face">
             <img src="../../resources/images/temp/@t-img07.png">
         </span>
-        
         홍길동 <span class="level-01">리더</span></h2>
+    <p>
+        프리미엄 강사진과 프리미엄 컨설팅의 <br>
+        <em>비대면 수업 TERA STUDY</em>
+    </p>
 </div>
 <div class="tab-link">
     <select title="마이페이지">
