--- a/html/sub/mypage05_3.html
+++ b/html/sub/mypage05_3.html
@@ -74,6 +74,7 @@
 					</div>
 				</section>
 				<div class="btn-area-a">
+					<button type="button" class="btn-type-g">삭제</button><!-- D : 내가 쓴 글인 경우 노출 -->
 					<button type="button" class="btn-type-e">목록</button>
 					<button type="button" class="btn-type-c">수정</button><!-- D : 내가 쓴 글인 경우 노출 -->
 				</div>
