--- a/html/sub/customer01_2.html
+++ b/html/sub/customer01_2.html
@@ -42,7 +42,7 @@
 					<button type="button" class="btn-round-a"><i class="icon-c"></i>99</button>
 					<button type="button" class="btn-round-a"><i class="icon-d"></i>공유</button>
 				</div>
-				<section class="box-a big">
+				<section class="box-a big customer-type">
 					<div class="view-area">
 						<div class="box-top">
 							<p class="view-title">영어/중국어 1개월 무료 체험단 모집</p>
@@ -55,6 +55,12 @@
 							<div class="view-img-area">
 								<img src="../../resources/images/temp/@sample.jpg" alt="">
 								<img src="../../resources/images/temp/@sample.jpg" alt="">
+							</div>
+							<div class="comment-area">
+								<div class="comment-top">
+									<p class="comment-count">댓글<span class="value">999개</span></p>
+									<button type="button" class="comment-toggle"><span class="for-a11y">댓글보기</span></button>
+								</div>
 							</div>
 						</div>
 					</div>
