--- a/html/sub/terms1.html
+++ b/html/sub/terms1.html
@@ -35,7 +35,7 @@
 				<div class="ajax-banner">
 				</div>
 				<div class="title-group">
-					<h2>회원이용약관</h2>
+					<h2>이용약관</h2>
 					<p>
 						프리미엄 강사진과 프리미엄 컨설팅의 <br>
 						<em>비대면 수업 TERA STUDY</em>
