텍스트 변경

--- a/html/inc/footer.html
+++ b/html/inc/footer.html
@@ -1,6 +1,6 @@
 <div class="footer-area">
     <div class="footer-content">
-        <p class="footer-logo"><span class="for-a11y">TeraStudy</span></p>
+        <p class="footer-logo"><span class="for-a11y">TeraSTUDY</span></p>
         <ul class="footer-nav">
             <li class="footer-nav-item"><a href="" class="link-footer">서비스 소개</a></li>
             <li class="footer-nav-item"><a href="" class="link-footer">이용약관</a></li>
