--- a/html/inc/goldkey.html
+++ b/html/inc/goldkey.html
@@ -1,14 +1,14 @@
 <section class="ui-modal type-goldkey" id="goldkeyModal" role="dialog" aria-hidden="true">
     <div class="ui-modal-wrap">
         <header class="ui-modal-header">
-            <img src="../../resources/images/common/logo.png" alt="TERA Study" class="logo">
+            <img src="../../resources/images/common/logo.png" alt="TERA STUDY" class="logo">
             <button type="button" class="ui-modal-close btn-close"><span class="blind">닫기</span></button>
         </header>
         <div class="ui-modal-cont">
             <div class="tit">
                 <h2>
                     <em>프리미엄 강사진! 프리미엄 컨설팅!</em>
-                    차별화된 <strong>1:1 맞춤형 수업,</strong> <span class="logo-text">TERA <b>Study</b></span>에서 경험하실 수 있습니다. 
+                    차별화된 <strong>1:1 맞춤형 수업,</strong> <span class="logo-text">TERA <b>STUDY</b></span>에서 경험하실 수 있습니다.
                 </h2>
             </div>
 
