--- a/html/inc/header.html
+++ b/html/inc/header.html
@@ -1,6 +1,6 @@
 <div class="header-area">
     <h1 class="logo-tera">
-        <a href="/"><img src="../../resources/images/common/logo.png" alt="TERA Study"></a>
+        <a href="/"><img src="../../resources/images/common/logo.png" alt="TERA STUDY"></a>
     </h1>
     <div class="util-menu">
         <a href="#" class="util-n1"><span class="blind">로그인</span></a>
