--- a/html/sub/leader.html
+++ b/html/sub/leader.html
@@ -34,7 +34,7 @@
 			<section class="leader-info">
 				
 				<div class="group">
-					<img class="photo" src="../../resources/images/teacher/sample01-detail.png" alt="맞춤형 프리미엄 학습 코디 TERA Study">
+					<img class="photo" src="../../resources/images/teacher/sample01-detail.png" alt="맞춤형 프리미엄 학습 코디 TERA STUDY">
 					<h2>
 						<span>중국어</span>
 						<em>祝你梦想成真</em>
