--- a/html/main/main.html
+++ b/html/main/main.html
@@ -31,7 +31,7 @@
 			<section class="teacher-group">
 				<h2>
 					차별화된 <strong>1:1 맞춤형 수업,</strong><br>
-					<span class="logo-text">TERA <b>Study</b></span>에서 경험하실 수 있습니다.
+					<span class="logo-text">TERA <b>STUDY</b></span>에서 경험하실 수 있습니다.
 				</h2>
 				<nav class="teacher-menu">
 					<ul class="dep-1">
@@ -178,7 +178,7 @@
 
 			<article class="article-box">
 				<section class="section-a">
-					<p class="section-a-title"><span class="txt-line"><span>TeraStudy만의 비교할 수 없는</span> <strong class="t-bold">프리미엄 서비스</strong><i class="blt-arrow-a"></i></span></p>
+					<p class="section-a-title"><span class="txt-line"><span>TeraSTUDY만의 비교할 수 없는</span> <strong class="t-bold">프리미엄 서비스</strong><i class="blt-arrow-a"></i></span></p>
 					<div class="service-info">
 						<div class="service-item">
 							<p class="txt-number"><span>하나!</span></p>
@@ -339,13 +339,13 @@
 	<section class="ui-modal type-premium" id="premiumLeaderModal" role="dialog" aria-hidden="true">
 		<div class="ui-modal-wrap">
 			<header class="ui-modal-header">
-				<img src="../../resources/images/common/logo.png" alt="TERA Study" class="logo">
+				<img src="../../resources/images/common/logo.png" alt="TERA STUDY" class="logo">
 				<button type="button" class="ui-modal-close btn-close"><span class="blind">닫기</span></button>
 			</header>
 			<div class="ui-modal-cont">
 				<div class="tit">
 					<h2>
-						<span class="logo-text">TERA <b>Study</b></span> 
+						<span class="logo-text">TERA <b>STUDY</b></span>
 						프리미엄 리더
 					</h2>
 				</div>
