--- a/html/sub/customer01_2.html
+++ b/html/sub/customer01_2.html
@@ -56,12 +56,17 @@
 								<img src="../../resources/images/temp/@sample.jpg" alt="">
 								<img src="../../resources/images/temp/@sample.jpg" alt="">
 							</div>
+							<!-- S : 댓글영역 -->
 							<div class="comment-area">
 								<div class="comment-top">
 									<p class="comment-count">댓글<span class="value">999개</span></p>
-									<button type="button" class="comment-toggle"><span class="for-a11y">댓글보기</span></button>
+									<button type="button" class="btn-comment-toggle"><span class="for-a11y">댓글보기</span></button>
+								</div>
+								<div class="comment-list">
+									댓글노출영역
 								</div>
 							</div>
+							<!-- E : 댓글영역 -->
 						</div>
 					</div>
 				</section>
@@ -81,6 +86,10 @@
 				$plugins.common.init();
 				$plugins.common.setThumbnail();
 
+				// 댓글
+				$('.comment-area .btn-comment-toggle').on('click', function(){
+					$(this).parent().parent().toggleClass('active');
+				});
 			});
 		})(jQuery, window, document);
 
