고객센터 진행중

--- a/html/sub/customer01.html
+++ b/html/sub/customer01.html
@@ -36,6 +36,28 @@
 				</div>
 				<div class="ajax-customer-top" data-n="1"></div>
 
+				<div class="customer-summery">
+					<div class="customer-info">
+						<p class="customer-logo"><img src="../../resources/images/common/logo.png" alt="TERA STUDY"></p>
+						<p class="customer-tel">02-6333-0042</p>
+						<p class="customer-time">평일 AM 09:00 ~ PM 05:00</p>
+					</div>
+					<div class="customer-summery-contents">
+						<div class="customer-item">
+							<i class="icon-customer-a"></i>
+							<p>TERA STUDY 서비스 사용법</p>
+						</div>
+						<div class="customer-item">
+							<i class="icon-customer-b"></i>
+							<p>비대면 강의실 사용법</p>
+						</div>
+						<div class="customer-item">
+							<i class="icon-customer-c"></i>
+							<p>비대면 강의실 오류해결</p>
+						</div>
+					</div>
+				</div>
+
 				<section class="search-area">
 					<fieldset>
 						<legend class="for-a11y">검색</legend>
