--- a/html/inc/mypageTopL.html
+++ b/html/inc/mypageTopL.html
@@ -11,15 +11,15 @@
 </div>
 <div class="tab-link">
     <select title="마이페이지">
-        <option value="/html/sub/mypageL01.html">강의목록</option>
-        <option value="/html/sub/mypageL02.html">리더수수료관리</option>
-        <option value="/html/sub/mypageL03.html">수강후기</option>
-        <option value="/html/sub/mypageL04.html">1:1 문의하기</option>
-        <option value="/html/sub/mypageL05.html">개인정보수정</option>
+        <option value="../../html/sub/mypageL01.html">강의목록</option>
+        <option value="../../html/sub/mypageL02.html">리더수수료관리</option>
+        <option value="../../html/sub/mypageL03.html">수강후기</option>
+        <option value="../../html/sub/mypageL04.html">1:1 문의하기</option>
+        <option value="../../html/sub/mypageL05.html">개인정보수정</option>
     </select>
-    <a href="/html/sub/mypageL01.html"><span>강의목록</span></a>
-    <a href="/html/sub/mypageL02.html"><span>리더수수료관리</span></a>
-    <a href="/html/sub/mypageL03.html"><span>수강후기</span></a>
-    <a href="/html/sub/mypageL04.html"><span>1:1 문의하기</span></a>
-    <a href="/html/sub/mypageL05.html"><span>개인정보수정</span></a>
+    <a href="../../html/sub/mypageL01.html"><span>강의목록</span></a>
+    <a href="../../html/sub/mypageL02.html"><span>리더수수료관리</span></a>
+    <a href="../../html/sub/mypageL03.html"><span>수강후기</span></a>
+    <a href="../../html/sub/mypageL04.html"><span>1:1 문의하기</span></a>
+    <a href="../../html/sub/mypageL05.html"><span>개인정보수정</span></a>
 </div>
